[Fix #3573] configKey metadata (#3588)